test/configCases/errors/import-missing/webpack.config.js
/** @type {import("../../../../").Configuration} */
module.exports = {
	bail: true
};
